@@ -1,4 +1,8 @@
 2010-10-28  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/conffile.c: Fix quoting in recovery-limit output.
+	* server-src/amadmin.c (disklist_one): Print recovery-limit.
+
+2010-10-28  Jean-Louis Martineau <martineau@zmanda.com>
 	* client-src/client_util.c: Don't free script->result.
 
 2010-10-27  Jean-Louis Martineau <martineau@zmanda.com>
